<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_normal">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="24dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="160dp">




            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/firstname"
                android:textColor="@color/black"

                android:textColorHint="@color/black"

                android:inputType="textPersonName" />



        <!-- Name Label -->


            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/lastname"
                android:textColor="@color/black"

                android:textColorHint="@color/black"
                android:inputType="textPersonName" />



        <!--  Email Label -->


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />




            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:inputType="textPassword" />


        <!-- Password Re-enter Label -->


            <EditText
                android:id="@+id/reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:textColor="@color/black"
                android:hint="@string/reenterpassword"
                android:inputType="textPassword" />


        <!-- Password Re-enter Label -->


            <EditText
                android:id="@+id/initialAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/yourWallet"
                android:textColorHint="@color/black"
                android:inputType="numberDecimal" />


        <!-- Signup Button -->
       <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/raleway"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/createnewaccount" />

        <TextView
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/alreadyamemeber"
            android:textColor="@color/black"
            android:textSize="16dip" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
